--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   http: ^0.12.0+4
   intl: ^0.16.1
   flutter_spinkit: ^3.1.0
-
+  expansion_tile_card: ^1.0.3
 
 dev_dependencies:
   flutter_test:
