--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   intl: ^0.16.1
   flutter_spinkit: ^3.1.0
   expansion_tile_card: ^1.0.3
+  font_awesome_flutter: ^8.7.0
+  flutter_screenutil: ^1.1.0
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
