--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,11 @@ dependencies:
   font_awesome_flutter: ^8.7.0
   flutter_screenutil: ^1.1.0
   url_launcher: ^5.4.2
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
